add js file, 90% UI done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1 id="day-display" class="">THURSDAY</h1>
           <div id="time-display" class="text-align-right">
             <h1 id="time-digits" class="d-inline">10:45</h1>
-            <h3 id="time-period" class="d-inline">am</h3>
+            <h3 id="time-period" class="d-inline"></h3>
           </div>
         </div>
       </div>
@@ -36,13 +36,92 @@
 <main>
 <div id="timeblocks">
   <div class="container">
+    <!-- timeblock 9am -->
     <div class="time-line grid-container">
       <p class="side-time">9am</p>
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block">
-        
+      <div class="time-block past">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 10am -->
+    <div class="time-line grid-container">
+      <p class="side-time">10am</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block present">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 11am -->
+    <div class="time-line grid-container">
+      <p class="side-time">11am</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block future">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 12pm -->
+    <div class="time-line grid-container">
+      <p class="side-time">12pm</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block future empty">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 1pm -->
+    <div class="time-line grid-container">
+      <p class="side-time">1pm</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block future empty">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 2pm -->
+    <div class="time-line grid-container">
+      <p class="side-time">2pm</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block future empty">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 3pm -->
+    <div class="time-line grid-container">
+      <p class="side-time">3pm</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block future empty">
+        <h4 class="title"></h4>
+        <p class="description"></p>
+      </div>
+    </div>
+    <!-- timeblock 4pm -->
+    <div class="time-line grid-container">
+      <p class="side-time">4pm</p>
+      <hr class="line">
+    </div>
+    <div class="grid-container">
+      <div class="time-block future empty">
+        <h4 class="title"></h4>
+        <p class="description"></p>
       </div>
     </div>
   </div>
@@ -51,5 +130,6 @@
 </main>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
