add momentjs time to header

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block past">
+      <div id="9" class="time-block past" value="9">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -53,7 +53,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block present">
+      <div id="10" class="time-block present" value="10">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -64,7 +64,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block future">
+      <div id="11" class="time-block future" value="11">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -75,7 +75,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block future empty">
+      <div id="12" class="time-block future empty" value="12">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -86,7 +86,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block future empty">
+      <div id="13" class="time-block future empty" value="13">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -97,7 +97,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block future empty">
+      <div id="14" class="time-block future empty" value="14">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -108,7 +108,7 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block future empty">
+      <div id="15" class="time-block future empty" value="15">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -119,11 +119,22 @@
       <hr class="line">
     </div>
     <div class="grid-container">
-      <div class="time-block future empty">
+      <div id="16" class="time-block future empty" value="16">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
+    <div class="time-line grid-container">
+      <p class="side-time">5pm</p>
+      <hr class="line">
+    </div>
+ </div>  <!-- end of container div -->
+</div> <!-- end of timeblock div -->
+<!-- current time line -->
+<div class="container">
+  <div id="current-time" class="grid-container">
+    <hr id="current-line">
+    <span id="triangle"></span>
   </div>
 </div>
 <!-- timeblock form -->
