update UI, add functional current time line

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   </head>
 
   <body>
+    <!-- current time line -->
+<div class="container">
+  <div id="current-time" class="grid-container">
+    <hr id="current-line">
+    <span id="triangle"></span>
+  </div>
+</div>
     <!-- header -->
     <header class="container-fluid position-fixed">
       <div id="header-content" class="container">
@@ -38,105 +45,74 @@
   <div class="container">
     <!-- timeblock 9am -->
     <div class="time-line grid-container">
-      <p class="side-time">9am</p>
-      <hr class="line">
+      <p class="side-time">9AM</p>
     </div>
     <div class="grid-container">
+      <p class="side-time">10AM</p>
       <div id="9" class="time-block past" value="9">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 10am -->
-    <div class="time-line grid-container">
-      <p class="side-time">10am</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">11AM</p>
       <div id="10" class="time-block present" value="10">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 11am -->
-    <div class="time-line grid-container">
-      <p class="side-time">11am</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">12PM</p>
       <div id="11" class="time-block future" value="11">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 12pm -->
-    <div class="time-line grid-container">
-      <p class="side-time">12pm</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">1PM</p>
       <div id="12" class="time-block future empty" value="12">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 1pm -->
-    <div class="time-line grid-container">
-      <p class="side-time">1pm</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">2PM</p>
       <div id="13" class="time-block future empty" value="13">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 2pm -->
-    <div class="time-line grid-container">
-      <p class="side-time">2pm</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">3PM</p>
       <div id="14" class="time-block future empty" value="14">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 3pm -->
-    <div class="time-line grid-container">
-      <p class="side-time">3pm</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">4PM</p>
       <div id="15" class="time-block future empty" value="15">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 4pm -->
-    <div class="time-line grid-container">
-      <p class="side-time">4pm</p>
-      <hr class="line">
-    </div>
     <div class="grid-container">
+      <p class="side-time">5PM</p>
       <div id="16" class="time-block future empty" value="16">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
     </div>
-    <div class="time-line grid-container">
-      <p class="side-time">5pm</p>
-      <hr class="line">
-    </div>
  </div>  <!-- end of container div -->
 </div> <!-- end of timeblock div -->
-<!-- current time line -->
-<div class="container">
-  <div id="current-time" class="grid-container">
-    <hr id="current-line">
-    <span id="triangle"></span>
-  </div>
-</div>
+
 <!-- timeblock form -->
 </main>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
