add data to local storage, render items to page

--- a/index.html
+++ b/index.html
@@ -90,14 +90,12 @@
     <div class="grid-container">
       <p class="side-time">3PM</p>
       <div id="14" class="time-block empty" data-value="14">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 3pm -->
     <div class="grid-container">
       <p class="side-time">4PM</p>
-      <div id="15" class="time-block empty" data-value="15" data-time="3PM - 4PM">
+      <div id="15" class="time-block empty" data-value="15">
         <h4 class="title"></h4>
         <p class="description"></p>
       </div>
@@ -122,9 +120,9 @@
   <h3 id="form-time"></h3>
   <form id="myform">
     <hr class="line">
-    <input type="text" name="10-title" class="title" placeholder="Event title"/>
+    <input type="text" id="title" name="title" class="title" placeholder="Event title"/>
     <hr class="line">
-    <input type="text" name="10-description" class="text" placeholder="Event description"/>
+    <input type="text" id="description" name="description" class="text" placeholder="Event description"/>
     <hr class="line">
   </form>
 </div>
