working site, updated readme

--- a/index.html
+++ b/index.html
@@ -50,40 +50,30 @@
     <div class="grid-container">
       <p class="side-time">10AM</p>
       <div id="9" class="time-block empty" data-value="9">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 10am -->
     <div class="grid-container">
       <p class="side-time">11AM</p>
       <div id="10" class="time-block empty" data-value="10">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 11am -->
     <div class="grid-container">
       <p class="side-time">12PM</p>
       <div id="11" class="time-block empty" data-value="11">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 12pm -->
     <div class="grid-container">
       <p class="side-time">1PM</p>
       <div id="12" class="time-block empty" data-value="12">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 1pm -->
     <div class="grid-container">
       <p class="side-time">2PM</p>
       <div id="13" class="time-block empty" data-value="13">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 2pm -->
@@ -96,16 +86,12 @@
     <div class="grid-container">
       <p class="side-time">4PM</p>
       <div id="15" class="time-block empty" data-value="15">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
     <!-- timeblock 4pm -->
     <div class="grid-container">
       <p class="side-time">5PM</p>
       <div id="16" class="time-block empty" data-value="16">
-        <h4 class="title"></h4>
-        <p class="description"></p>
       </div>
     </div>
  </div>  <!-- end of container div -->
@@ -120,9 +106,9 @@
   <h3 id="form-time"></h3>
   <form id="myform">
     <hr class="line">
-    <input type="text" id="title" name="title" class="title" placeholder="Event title"/>
+    <input type="text" id="title" name="title" placeholder="Event title"/>
     <hr class="line">
-    <input type="text" id="description" name="description" class="text" placeholder="Event description"/>
+    <input type="text" id="description" name="description" placeholder="Event description"/>
     <hr class="line">
   </form>
 </div>
